--- a/.github/workflows/build_all_packages.yml
+++ b/.github/workflows/build_all_packages.yml
@@ -38,12 +38,45 @@ jobs:
       - name: Retrieve version/release numbers, and previous tag
         id: get_release_version
         run: |
-          version_from_tag=$( echo "${{ github.ref_name }}" | sed -E 's,^v?([0-9]+\.[0-9]+\.[0-9]+).*$,\1,' )
-          release_from_tag=$( echo "${{ github.ref_name }}" | sed -E 's,^v?[0-9]+\.[0-9]+\.[0-9]+(-([0-9]+))?.*$,\2,' )
-          [ -z "${release_from_tag}" ] && release_from_tag=0
-          echo "version=${version_from_tag}" >> $GITHUB_OUTPUT
-          echo "release=${release_from_tag}" >> $GITHUB_OUTPUT
-          git tag | tail -2 | awk '(NR==1){print "previous_tag="$1}' >> $GITHUB_OUTPUT
+          if [ "${{ github.ref_type }}" = 'tag' ]
+          then
+            awk -F '-' 'BEGIN {v="1.0"; r="1"}
+              /v?[0-9]+(\.[0-9]+(\.[0-9]+)?)?(-[0-9]+)?$/ {
+                v=$1 ; sub("^v?", "", v)
+                if (NF==2) { r=$2 }
+              }
+              END { print "version="v ; print "release="r }' <<< '${{ github.ref_name }}' >> $GITHUB_OUTPUT
+            git tag | tail -2 | awk '(NR==1){print "previous_tag="$1}' >> $GITHUB_OUTPUT
+          else
+            if [ -f "main-semodule-file"]
+            then
+              semodule_file=$( cat main-semodule-file )
+              if [ -f "${semodule_file}" ]
+              then
+                awk '
+                  /^[[:blank:]]*module[[:blank:]]+/ {
+                    sub("[[:blank:]]*;$", "")
+                    module_vers=$3
+                  }
+                  /^[[:blank:]]*policy_module[[:blank:]]*\(/ {
+                    sub("^[[:blank:]]*policy_module[[:blank:]]*[(][[:blank:]]*", "")
+                    sub("[[:blank:]]*)[[:blank:]]*$", "")
+                    split($0, a, "[[:blank:]]*,[[:blank:]]*")
+                    module_vers=a[2]
+                  }
+                  END {
+                    print "version="module_vers
+                    print "release=1"
+                  }' ${semodule_file} >> $GITHUB_OUTPUT
+              else
+                echo '::error title=SEmoduleNotFound::Unable to retrieve SELinux module name'
+                exit 1
+              fi
+            else
+              echo '::error title=SEmoduleNotFound::Unable to retrieve SELinux module name'
+              exit 1
+            fi
+          fi
   
   build_Fedora:
     name: Build RPMs for Fedora and upload them to release
@@ -52,6 +85,7 @@ jobs:
     secrets:
       gpg_private_key: ${{ secrets.RPM_SIGNING_KEY }}
       gpg_private_key_password: ${{ secrets.RPM_SIGNING_KEY_PASSWORD }}
+      sftp_password: ${{ secrets.SSH_OVH_PASSWORD }}
     with:
       build_distro: fedora
       build_distro_versions: '[ "37", "38", "39", "40" ]'
@@ -59,6 +93,9 @@ jobs:
       release_upload_url: ${{ needs.get_release_info.outputs.upload_url }}
       provided_version: ${{ needs.get_release_info.outputs.version_number }}
       provided_release: ${{ needs.get_release_info.outputs.release_number }}
+      sftp_server: ${{ vars.SSH_OVH_HOST }}
+      sftp_user: ${{ vars.SSH_OVH_USER }}
+      sftp_remote_path: www/repo/public/fc 
       
   build_EL:
     name: Build RPMs for EL and upload them to release
@@ -67,6 +104,7 @@ jobs:
     secrets:
       gpg_private_key: ${{ secrets.RPM_SIGNING_KEY }}
       gpg_private_key_password: ${{ secrets.RPM_SIGNING_KEY_PASSWORD }}
+      sftp_password: ${{ secrets.SSH_OVH_PASSWORD }}
     with:
       build_distro: almalinux
       build_distro_versions: '[ "8", "9" ]'
@@ -74,6 +112,9 @@ jobs:
       release_upload_url: ${{ needs.get_release_info.outputs.upload_url }}
       provided_version: ${{ needs.get_release_info.outputs.version_number }}
       provided_release: ${{ needs.get_release_info.outputs.release_number }}
+      sftp_server: ${{ vars.SSH_OVH_HOST }}
+      sftp_user: ${{ vars.SSH_OVH_USER }}
+      sftp_remote_path: www/repo/public/el 
       
   build_Debian:
     name: Build Debian packages and upload them to release
