--- a/.github/workflows/build_all_packages.yml
+++ b/.github/workflows/build_all_packages.yml
@@ -123,6 +123,7 @@ jobs:
     secrets:
       gpg_private_key: ${{ secrets.DEB_SIGNING_KEY }}
       gpg_private_key_password: ${{ secrets.DEB_SIGNING_KEY_PASSWORD }}
+      sftp_password: ${{ secrets.SSH_OVH_PASSWORD }}
     with:
       build_distro: debian
       build_distro_versions: '[ "11", "12" ]'
@@ -130,6 +131,9 @@ jobs:
       release_upload_url: ${{ needs.get_release_info.outputs.upload_url }}
       package_version: ${{ needs.get_release_info.outputs.version_number }}-${{ needs.get_release_info.outputs.release_number }}
       previous_tag: ${{ needs.get_release_info.outputs.previous_tag }}
+      sftp_server: ${{ vars.SSH_OVH_HOST }}
+      sftp_user: ${{ vars.SSH_OVH_USER }}
+      sftp_remote_path: www/repo/public/debian 
       
   build_Ubuntu:
     name: Build Ubuntu packages and upload them to release
@@ -138,6 +142,7 @@ jobs:
     secrets:
       gpg_private_key: ${{ secrets.DEB_SIGNING_KEY }}
       gpg_private_key_password: ${{ secrets.DEB_SIGNING_KEY_PASSWORD }}
+      sftp_password: ${{ secrets.SSH_OVH_PASSWORD }}
     with:
       build_distro: ubuntu
       build_distro_versions: '[ "22.04", "24.04" ]'
@@ -145,6 +150,9 @@ jobs:
       release_upload_url: ${{ needs.get_release_info.outputs.upload_url }}
       package_version: ${{ needs.get_release_info.outputs.version_number }}-${{ needs.get_release_info.outputs.release_number }}
       previous_tag: ${{ needs.get_release_info.outputs.previous_tag }}
+      sftp_server: ${{ vars.SSH_OVH_HOST }}
+      sftp_user: ${{ vars.SSH_OVH_USER }}
+      sftp_remote_path: www/repo/public/ubuntu 
 
   all_green:
     name: All jobs successful
