Adding the springboot.preset systemd file

--- a/dpkg/springboot-systemd/Makefile
+++ b/dpkg/springboot-systemd/Makefile
@@ -6,6 +6,7 @@ DATAROOTDIR := /usr/share
 
 install: 
 	@mkdir -p -m 0755 $(DESTDIR)/usr/lib/systemd/system
+	@mkdir -p -m 0755 $(DESTDIR)/usr/lib/systemd/system-preset
 	@mkdir -p -m 0755 $(DESTDIR)/opt/springboot/bin
 	@mkdir -p -m 0755 $(DESTDIR)/opt/springboot/service
 	@mkdir -p -m 0755 $(DESTDIR)/usr/share/man/man7
@@ -13,6 +14,7 @@ install:
 
 	@install -m 0444 $(SOURCEDIR)/systemd/springboot@.service $(DESTDIR)/usr/lib/systemd/system/
 	@install -m 0444 $(SOURCEDIR)/systemd/springboot.target $(DESTDIR)/usr/lib/systemd/system/
+	@install -m 0444 $(SOURCEDIR)/systemd/springboot.preset $(DESTDIR)/usr/lib/systemd/system-preset/90-springboot.preset
 	@install -m 0444 $(SOURCEDIR)/systemd/springboot-shutdown.target $(DESTDIR)/usr/lib/systemd/system/
 	@install -m 0555 $(SOURCEDIR)/systemd/springboot-service.sh $(DESTDIR)/opt/springboot/bin/
 
