Add compilation test for EL10
Signed-off-by: Hubert Quarantel-Colombani <hubert@quarantel.name>

--- a/.github/workflows/validate_selinux_compile.yml
+++ b/.github/workflows/validate_selinux_compile.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        el_vers: [ '8', '9' ]
+        el_vers: [ '8', '9', '10' ]
         
     steps:
       - name: Checkout SELinux code
