Adding new distros
Signed-off-by: Hubert Quarantel-Colombani <hubert@quarantel.name>

--- a/.github/workflows/build_all_packages.yml
+++ b/.github/workflows/build_all_packages.yml
@@ -88,7 +88,7 @@ jobs:
       sftp_password: ${{ secrets.SSH_OVH_PASSWORD }}
     with:
       build_distro: fedora
-      build_distro_versions: '[ "37", "38", "39", "40" ]'
+      build_distro_versions: '[ "38", "39", "40", "41", "42", "43" ]'
       spec_file_location: rpm/
       release_upload_url: ${{ needs.get_release_info.outputs.upload_url }}
       provided_version: ${{ needs.get_release_info.outputs.version_number }}
@@ -126,7 +126,7 @@ jobs:
       sftp_password: ${{ secrets.SSH_OVH_PASSWORD }}
     with:
       build_distro: debian
-      build_distro_versions: '[ "11", "12" ]'
+      build_distro_versions: '[ "11", "12", "13" ]'
       build_material_dir: dpkg
       release_upload_url: ${{ needs.get_release_info.outputs.upload_url }}
       package_version: ${{ needs.get_release_info.outputs.version_number }}-${{ needs.get_release_info.outputs.release_number }}
