--- a/.github/workflows/validate_selinux_compile.yml
+++ b/.github/workflows/validate_selinux_compile.yml
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        fedora_vers: [ '37', '38', '39', '40' ]
+        fedora_vers: [ '38', '39', '40', '41', '42', '43' ]
     steps:
       - name: Checkout SELinux code
         uses: actions/checkout@master
@@ -81,7 +81,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        debian_vers: [ '11', '12' ]
+        debian_vers: [ '11', '12', '13' ]
     steps:
       - name: Checkout SELinux code
         uses: actions/checkout@master
